--- a/src/app/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product-details/variant-section/variant-section.component.scss
@@ -37,6 +37,7 @@
         margin-bottom: 0.5rem;
         padding: 0.2rem 0.7rem;
         white-space: nowrap;
+        text-overflow: ellipsis;
         border: 1px solid #e7edff;
         border-radius: 4px;
         transition: border-color .4s ease,
@@ -72,7 +73,6 @@
 
         &-l {
           @extend .option-icon;
-          flex-direction: column;
           height: auto;
           padding: 1rem 0;
           border: none;
@@ -80,10 +80,8 @@
           img {
             width: 70px;
             height: 70px;
-            margin-bottom: 1rem;
             object-fit: contain;
-          }
-          
+          }          
         }
       }
     }
