--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -5,8 +5,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 68px;
-    padding: 0 1.5rem;
+    padding: 1.5rem;
   
     .close-btn {
       margin-left: auto;
