--- a/src/app/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product-details/slider/lightbox/lightbox.component.html
@@ -1,4 +1,4 @@
-<app-modal [showModal]="openLightbox">
+<app-modal [showModal]="openLightbox" (showModal)="onClose()">
 
   <div class="lightbox">
     
