--- a/src/app/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product-details/slider/lightbox/lightbox.component.html
@@ -1,7 +1,13 @@
 <app-modal [showModal]="openLightbox" (showModal)="onClose()">
 
   <div class="lightbox">
+    <div class="image-container">
+
+    </div>
     
+    <div class="active-image-indicator">
+
+    </div>
   </div>
 
 </app-modal>
