--- a/src/app/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product-details/slider/lightbox/lightbox.component.html
@@ -1,6 +1,6 @@
 <app-modal [showModal]="openLightbox" (showModal)="onClose()">
 
-  <div class="lightbox">
+  <div *ngIf="images && images.length" class="lightbox">
     <div class="image-container">
 
     </div>
