--- a/src/app/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product-details/slider/lightbox/lightbox.component.html
@@ -1,10 +1,15 @@
 <app-modal [showModal]="openLightbox" (showModal)="onClose()">
 
   <div *ngIf="images?.length" class="lightbox">
-    <ul (scroll)="onPreviewScroll($event.target)" 
-      class="image-container">
-      <li *ngFor="let image of images;" class="slide">
+    <ul 
+      #imageContainer
+      (scroll)="onPreviewScroll($event.target)" class="image-container">
+      <!-- <li #slide *ngFor="let image of images;" class="slide">
         <img image-loader [src]="image" alt="Product Image">
+      </li> -->
+
+      <li class="slide">
+        <img image-loader [src]="images[currentImage]" alt="Product Image">
       </li>
     </ul>
     
