--- a/src/app/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product-details/slider/lightbox/lightbox.component.html
@@ -4,13 +4,13 @@
     <ul 
       #imageContainer
       (scroll)="onPreviewScroll($event.target)" class="image-container">
-      <!-- <li #slide *ngFor="let image of images;" class="slide">
+      <li #slide *ngFor="let image of images;" class="slide">
         <img image-loader [src]="image" alt="Product Image">
-      </li> -->
-
-      <li class="slide">
-        <img image-loader [src]="images[currentImage]" alt="Product Image">
       </li>
+
+      <!-- <li class="slide">
+        <img image-loader [src]="images[currentImage]" alt="Product Image">
+      </li> -->
     </ul>
     
     <div class="active-image-indicator">
