--- a/src/app/product-details/slider/lightbox/lightbox.component.scss
+++ b/src/app/product-details/slider/lightbox/lightbox.component.scss
@@ -2,28 +2,85 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-height: calc(100% - 87.19px);
+  height: calc(100% - 87.19px);
+
+  .top-content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+    &:hover {
+      .nav-button {
+        opacity: 1;
+      }
+    }
+
+    .nav-button {
+      opacity: 0;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 40px;
+      height: 40px;
+      justify-content: center;
+      border-radius: 40px;
+      background-color: #e6e9f0;     
+      transition: background-color .4s ease, 
+      transform .3s ease, opacity .3s ease;
+      overflow: hidden;
+
+      &:disabled {
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      .material-icons {
+        color: #7a8196;
+      }
+
+      &:hover {
+        background-color: #c7cad8; 
+      }
+    }
+
+    .before {
+      left: 2rem;
+
+      &:hover {
+        // transform: translateX(-2px);
+      }
+    }
+
+    .after {
+      right: 2rem;
+
+      &:hover {
+        // transform: translateX(2px);
+      }
+    }
+  }
   
   .image-container {
     display: flex;
     width: 100%;
-    height: auto;
+    height: inherit;
     margin: auto; 
     overflow: hidden;
     overflow-x: auto;
-    // scrollbar-width: none;
-    // -ms-overflow-style: none;
     scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 
-    // &::-webkit-scrollbar {
-    //   display: none;
-    // }
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
     .slide {          
       flex-shrink: 0;
       width: 100%;
-      height: 600px;    
+      height: inherit;    
       scroll-snap-align: center;      
       overflow: hidden;
 
@@ -38,12 +95,18 @@
     }        
   }
 
-  .active-image-indicator {
+  .bottom-content {
     flex-shrink: 0;
     width: 100%;
     height: 110px;
     margin-top: auto;
-    padding: 2rem;
-    background-color: #222;
+    background-color: #fff;
+
+    .active-image-indicator {
+
+      
+    }
   }
+
+  
 }
