--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -6,6 +6,7 @@
   width: 98vw;
   height: 95vh;
   background-color: #fff;
+  transition: width .3s ease, height .3s ease;
   overflow: hidden;
 
   .top {
@@ -35,5 +36,12 @@
         background-color: #e6e9f0;
       }
     }
+  }
+}
+
+@media (max-width: 600px) {
+  .modal {
+    width: 100%;
+    height: 100%;
   }
 }
