--- a/src/app/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product-details/slider/lightbox/lightbox.component.html
@@ -1,14 +1,16 @@
-<app-modal [showModal]="true" (showModal)="onClose()">
+<app-modal [showModal]="openLightbox" (showModal)="onClose()">
 
   <div *ngIf="images?.length" class="lightbox">
     <div class="top-content">
       <button 
+        (click)="onNavButtonClick('previous')"
         [disabled]="currentImage == 0"
         class="nav-button before">
         <i class="material-icons">navigate_before</i>
       </button>
 
       <button 
+        (click)="onNavButtonClick('next')"
         [disabled]="currentImage == images.length - 1"
         class="nav-button after">
         <i class="material-icons">navigate_next</i>
