--- a/src/app/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product-details/slider/lightbox/lightbox.component.html
@@ -21,7 +21,9 @@
         class="image-container">
         
         <li #slide *ngFor="let image of images;" class="slide">
-          <img image-loader [src]="image" alt="Product Image">
+          <div class="slide-image-frame">
+            <img image-loader [src]="image" alt="Product Image">
+          </div>
         </li>
       </ul>
     </div>
