--- a/src/app/product-details/slider/lightbox/lightbox.component.scss
+++ b/src/app/product-details/slider/lightbox/lightbox.component.scss
@@ -73,15 +73,20 @@
       width: 100%;
       height: inherit;    
       scroll-snap-align: center;      
-      overflow: hidden;
 
-      img {
-        display: block;
-        max-width: 1000px;
-        height: 100%;
+      .slide-image-frame {
+        max-width: 850px;
+        height: inherit;
         margin: auto;
-        object-fit: contain;
-        object-position: center center;
+        overflow: hidden;
+        cursor: zoom-in;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: contain;
+          object-position: center center;
+        }
       }
     }        
   }
@@ -95,7 +100,6 @@
 
     .active-image-indicator {
 
-      
     }
   } 
 }
@@ -109,8 +113,8 @@
         scroll-behavior: smooth;
 
         .slide {
+
           img {
-            
             width: 100%;
           }
         }
