--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -1,13 +1,34 @@
+@keyframes zoomIn {
+  from {
+    transform: scale(1.5, 1.5);
+  }
+}
+
+@keyframes zoomOut {
+  to {
+    transform: scale(1.5, 1.5);
+  }
+}
+
+.overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .modal {
-  position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
   width: 98vw;
   height: 95vh;
   background-color: #fff;
   transition: width .3s ease, height .3s ease;
+  animation: zoomIn .2s ease;
   overflow: hidden;
+
+  &.zoom-out {
+    animation: zoomOut .2s ease forwards;
+  }
 
   .top {
     position: relative;
