--- a/src/app/product-details/slider/lightbox/lightbox.component.scss
+++ b/src/app/product-details/slider/lightbox/lightbox.component.scss
@@ -96,10 +96,14 @@
     width: 100%;
     height: 110px;
     margin-top: auto;
+    padding: 0 8rem;
     background-color: #fff;
 
     .active-image-indicator {
-
+      position: relative;
+      width: 100%;
+      height: 2px;
+      background-color: #c7cad8;
     }
   } 
 }
