--- a/src/app/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product-details/slider/lightbox/lightbox.component.html
@@ -30,7 +30,7 @@
     
     <div class="bottom-content">
       <div class="active-image-indicator">
-
+        <div class="scroller"></div>
       </div>
     </div>
   </div>
