--- a/src/app/product-details/slider/lightbox/lightbox.component.scss
+++ b/src/app/product-details/slider/lightbox/lightbox.component.scss
@@ -97,8 +97,14 @@
     width: 100%;
     height: 100px;
     margin-top: auto;
-    padding: 0 7rem;
+    padding: 0 5rem;
     background-color: #fff;
+
+    .clickable-area {
+      width: 100%;
+      padding: 1rem;
+      cursor: pointer;
+    }
 
     .active-image-indicator {
       position: relative;
@@ -107,7 +113,6 @@
       border-radius: 4px;
       background-color: #c7cad8;
       overflow: hidden;
-      cursor: pointer;
 
       .scroller {
         position: absolute;
