--- a/src/app/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product-details/slider/lightbox/lightbox.component.html
@@ -16,9 +16,7 @@
         <i class="material-icons">navigate_next</i>
       </button>
 
-      <ul #imageContainer
-        (scroll)="onPreviewScroll($event.target)"
-        class="image-container">
+      <ul #imageContainer class="image-container">
         
         <li #slide *ngFor="let image of images;" class="slide">
           <div class="slide-image-frame">
