--- a/src/app/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product-details/slider/lightbox/lightbox.component.html
@@ -16,8 +16,7 @@
         <i class="material-icons">navigate_next</i>
       </button>
 
-      <ul #imageContainer class="image-container">
-        
+      <ul #imageContainer class="image-container">        
         <li #slide *ngFor="let image of images;" class="slide">
           <div class="slide-image-frame">
             <img image-loader [src]="image" alt="Product Image">
@@ -29,7 +28,10 @@
     <div class="bottom-content">
       <div class="clickable-area">
         <div class="active-image-indicator">
-          <div [style.width.%]="100 / images.length" class="scroller"></div>
+          <div 
+            #imageIndicator
+            [style.width.%]="100 / images.length" 
+            class="scroller"></div>
         </div>
       </div>
     </div>
