--- a/src/app/product-details/slider/lightbox/lightbox.component.scss
+++ b/src/app/product-details/slider/lightbox/lightbox.component.scss
@@ -122,6 +122,7 @@
         height: 100%;
         border-radius: 4px;
         background-color: #F72551;
+        transition: transform .6s ease;
       }
     }
   } 
