--- a/src/app/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product-details/slider/lightbox/lightbox.component.html
@@ -26,13 +26,13 @@
     </div>
     
     <div class="bottom-content">
-      <div class="clickable-area">
-        <div class="active-image-indicator">
-          <div 
+      <div class="range-clickable-area">
+        <button class="range">
+          <span 
             #imageIndicator
             [style.width.%]="100 / images.length" 
-            class="scroller"></div>
-        </div>
+            class="indicator"></span>
+        </button>
       </div>
     </div>
   </div>
