--- a/src/app/product-details/slider/lightbox/lightbox.component.scss
+++ b/src/app/product-details/slider/lightbox/lightbox.component.scss
@@ -97,16 +97,16 @@
     width: 100%;
     height: 100px;
     margin-top: auto;
-    padding: 0 5rem;
+    padding: 0 6rem;
     background-color: #fff;
 
-    .clickable-area {
+    .range-clickable-area {
       width: 100%;
-      padding: 1rem;
+      padding: 0.65rem 0;
       cursor: pointer;
     }
 
-    .active-image-indicator {
+    .range {
       position: relative;
       width: 100%;
       height: 2px;
@@ -114,7 +114,7 @@
       background-color: #c7cad8;
       overflow: hidden;
 
-      .scroller {
+      .indicator {
         position: absolute;
         top: 0;
         left: 0;
