--- a/src/app/product-details/slider/lightbox/lightbox.component.scss
+++ b/src/app/product-details/slider/lightbox/lightbox.component.scss
@@ -9,6 +9,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    user-select: none;
 
     &:hover {
       .nav-button {
@@ -25,7 +26,7 @@
       height: 40px;
       justify-content: center;
       border-radius: 40px;
-      background-color: #e6e9f0;     
+      background-color: rgba(230, 233, 240, 0.623);     
       transition: background-color .4s ease, 
       transform .3s ease, opacity .3s ease;
       overflow: hidden;
@@ -122,7 +123,7 @@
         height: 100%;
         border-radius: 4px;
         background-color: #F72551;
-        transition: transform .6s ease;
+        transition: transform .7s ease;
       }
     }
   } 
@@ -132,6 +133,16 @@
   .lightbox {
 
     .top-content {
+      
+      .nav-button {
+        .before {
+          left: 1rem;
+        }
+    
+        .after {
+          right: 1rem;
+        }
+      }
 
       .image-container {
         scroll-behavior: smooth;
@@ -144,5 +155,17 @@
         }
       }
     }
+
+    .bottom-content {
+      height: 80px;
+      padding: 0 4rem;
+
+      .range {
+
+        .indicator {
+          transition: transform .4s ease;
+        }
+      }
+    } 
   }
 }
