--- a/src/app/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product-details/slider/lightbox/lightbox.component.html
@@ -29,7 +29,7 @@
       <div class="range-clickable-area">
         <button class="range">
           <span 
-            #imageIndicator
+            #rangeIndicator
             [style.width.%]="100 / images.length" 
             class="indicator"></span>
         </button>
