--- a/src/app/product-details/slider/lightbox/lightbox.component.scss
+++ b/src/app/product-details/slider/lightbox/lightbox.component.scss
@@ -149,9 +149,13 @@
 
         .slide {
 
-          img {
-            width: 100%;
-          }
+          .slide-image-frame {
+            cursor: default;
+
+            img {
+              width: 100%;
+            }
+          }          
         }
       }
     }
