--- a/src/app/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product-details/slider/lightbox/lightbox.component.html
@@ -28,6 +28,7 @@
     <div class="bottom-content">
       <div class="range-clickable-area">
         <button class="range">
+          <!-- click event missing -->
           <span 
             #rangeIndicator
             [style.width.%]="100 / images.length" 
