--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 @import url('./scss/reset.scss');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
 
+@import 'scss/animations';
+
 html::-webkit-scrollbar-thumb {
   position: fixed;
 }
@@ -89,47 +91,7 @@ img {
   }
 }
 
-@keyframes reveal {
-  from {
-    visibility: hidden;
-    opacity: 0;
-  }
-  to {
-    visibility: visible;
-    opacity: 1;
-  }
-}
 
-@keyframes hide {
-  from {
-    visibility: visible;
-    opacity: 1;
-  }
-  to {
-    visibility: hidden;
-    opacity: 0;
-  }
-}
-
-@keyframes slideIn {
-  from {
-    transform: translateX(100%);
-  }
-  to {
-    transform: translateX(0);
-  }
-}
-
-@keyframes slideOut {
-  from {
-    opacity: 1;
-    transform: translateX(0);
-  }
-  to {
-    opacity: 0;
-    transform: translateX(100%);
-  }
-}
 
 .banner {
   position: relative;
