--- a/src/app/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product-details/slider/lightbox/lightbox.component.html
@@ -1,6 +1,6 @@
 <app-modal [showModal]="true" (showModal)="onClose()">
 
-  <div #lightbox *ngIf="images?.length" class="lightbox">
+  <div *ngIf="images?.length" class="lightbox">
     <div class="top-content">
       <button 
         (click)="onNavButtonClick('previous')"
@@ -28,7 +28,6 @@
     <div class="bottom-content">
       <button (click)="onRangeClick($event)" class="range-clickable-area">
         <div class="range">
-          <!-- click event missing -->
           <span 
             #rangeIndicator
             [style.width.%]="100 / images.length" 
