--- a/src/app/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product-details/slider/lightbox/lightbox.component.html
@@ -19,7 +19,9 @@
       <ul #imageContainer class="image-container">        
         <li #slide *ngFor="let image of images;" class="slide">
           <div class="slide-image-frame">
-            <img image-loader [src]="image" alt="Product Image">
+            <img 
+              (click)="onImageClick($event.target)" 
+              image-loader [src]="image" alt="Product Image">
           </div>
         </li>
       </ul>
