--- a/src/app/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product-details/slider/lightbox/lightbox.component.html
@@ -18,7 +18,7 @@
 
       <ul #imageContainer class="image-container">        
         <li #slide *ngFor="let image of images;" class="slide">
-          <div class="slide-image-frame">
+          <div (mousemove)="onMouseMove($event)" class="slide-image-frame">
             <img 
               (click)="onImageClick($event.target)" 
               image-loader [src]="image" alt="Product Image">
