--- a/src/app/product-details/slider/lightbox/lightbox.component.scss
+++ b/src/app/product-details/slider/lightbox/lightbox.component.scss
@@ -94,7 +94,6 @@
           display: block;
           width: 100%;
           height: 100%;
-          // transform: translate(-300px, 300px);
           object-fit: contain;
         }
       }
@@ -123,7 +122,7 @@
       background-color: #c7cad8;
       overflow: hidden;
 
-      .indicator {
+      .current-image-indicator {
         position: absolute;
         top: 0;
         left: 0;
