--- a/src/app/admin-page/admin-page.component.scss
+++ b/src/app/admin-page/admin-page.component.scss
@@ -30,3 +30,32 @@ main {
     }
   }
 }
+
+
+.module-jamf {
+  width: 300px;
+  margin: 10rem auto;
+  border: 1px solid #222;
+}
+
+.jamf-container {
+  display: block;
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+}
+
+.jamf-mover {
+  width: 300px;
+  height: 300px;
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/jamf-laptop-screen.png);
+  background-size: 800px;
+  background-repeat: no-repeat;
+  background-position: -30px 40px;
+  transform: scale(1);
+  // transition: background-position 0.25s;
+
+  &.no-more-slidey {
+    transition: none;
+  }
+}
