--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -5,17 +5,7 @@
       <a routerLink="./product-creation" class="navbar-link">Add new product</a>
     </nav>
     
-    <!-- <router-outlet></router-outlet> -->
-
-
-    <div class="module-jamf" id="module-jamf">
-  
-      <a href="http://synd.co/2DNywdE" class="jamf-container" id="jamf-container" target="_blank" rel="noopener">
-        <div class="jamf-mover" id="jamf-mover">
-        </div>
-      </a>
-      
-    </div>
+    <router-outlet></router-outlet>
   </div>
 </main>
   
