--- a/src/app/product-details/slider/lightbox/lightbox.component.scss
+++ b/src/app/product-details/slider/lightbox/lightbox.component.scss
@@ -79,15 +79,19 @@
 
       .slide-image-frame {
         position: relative;
-        // display: flex;
-        // justify-content: center;
-        // align-items: center;
         max-width: 850px;
         height: inherit;
         margin: auto;
         overflow: hidden;
         cursor: zoom-in;
-        border: 2px solid #7a8196;
+        border: 1px solid #7a8196;
+
+        &.image-zoomed-in {
+          background-size: 1500px;
+          background-repeat: no-repeat;
+          background-position: center center;
+          cursor: zoom-out;
+        }
 
         img {
           position: relative;
