--- a/src/app/product-details/slider/lightbox/lightbox.component.scss
+++ b/src/app/product-details/slider/lightbox/lightbox.component.scss
@@ -86,19 +86,23 @@
         cursor: zoom-in;
         border: 1px solid #7a8196;
 
-        &.image-zoomed-in {
-          background-size: 1500px;
-          background-repeat: no-repeat;
-          background-position: center center;
-          cursor: zoom-out;
-        }
-
         img {
           position: relative;
           display: block;
           width: 100%;
           height: 100%;
+          transition: transform 0.3s ease;
           object-fit: contain;
+
+          &:hover {
+            transform: scale(1.5, 1.5);
+          }
+
+          &.zoomed-in {
+            transform: scale(2);
+            cursor: zoom-out;
+            transition: transform .3s ease;
+          }
         }
       }
     }        
