--- a/src/app/product-details/slider/lightbox/lightbox.component.scss
+++ b/src/app/product-details/slider/lightbox/lightbox.component.scss
@@ -94,9 +94,9 @@
           transition: transform 0.3s ease;
           object-fit: contain;
 
-          &:hover {
-            transform: scale(1.5, 1.5);
-          }
+          // &:hover {
+          //   transform: scale(1.5, 1.5);
+          // }
 
           &.zoomed-in {
             transform: scale(2);
