--- a/src/app/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product-details/slider/lightbox/lightbox.component.html
@@ -17,7 +17,7 @@
       </button>
 
       <ul #imageContainer class="image-container">        
-        <li #slide *ngFor="let image of images;" class="slide">
+        <li #slide *ngFor="let image of images" class="slide">
           <div class="slide-image-frame">
             <img 
               image-loader 
