--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -27,12 +27,12 @@
 
 @keyframes zoomIn {
   from {
-    transform: scale(1.5, 1.5);
+    transform: scale(1.5);
   }
 }
 
 @keyframes zoomOut {
   to {
-    transform: scale(1.5, 1.5);
+    transform: scale(1.5);
   }
 }
