--- a/src/app/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product-details/slider/lightbox/lightbox.component.html
@@ -18,11 +18,11 @@
 
       <ul #imageContainer class="image-container">        
         <li #slide *ngFor="let image of images" class="slide">
-          <div class="slide-image-frame">
+          <div (mousemove)="onMouseMove($event)" class="slide-image-frame" [class.zoomed-in]="viewFullImage">
             <img 
               (click)="viewFullImage = !viewFullImage" 
-              (mousemove)="onMouseMove($event)"
-              [class.zoomed-in]="viewFullImage"
+              
+              
               [src]="image" 
               alt="Product Image">
           </div>
