--- a/src/app/product-details/slider/lightbox/lightbox.component.scss
+++ b/src/app/product-details/slider/lightbox/lightbox.component.scss
@@ -161,6 +161,7 @@
         scroll-behavior: smooth;
 
         .slide {
+          padding: 0 0.5rem;
 
           .slide-image-frame {
             cursor: default;
