--- a/src/app/product-ratings/product-ratings.component.html
+++ b/src/app/product-ratings/product-ratings.component.html
@@ -16,7 +16,7 @@
 
     <div *ngIf="!isLoading && rating.totalReviews" class="content">    
       <button 
-        (click)="submitReview()"
+        (click)="writeReview()"
         class="submit-new-btn">Write a Review</button>
 
       <rating-graph [userRating]="userRating"></rating-graph>
