--- a/src/app/product-ratings/review-form/review-form.component.html
+++ b/src/app/product-ratings/review-form/review-form.component.html
@@ -1,7 +1,7 @@
 <app-modal [showModal]="showForm" (showModal)="onClose()">
   <div *ngIf="showForm" class="wrapper">
     <div class="product-details">
-      
+
     </div>
     
     <form 
@@ -10,7 +10,9 @@
       id="review-form">
       <div class="form-group">
         <label>Overall rating</label>
-        <star-rating></star-rating>
+        <star-rating 
+          [newRating]="true"
+          (selectedRating)="onRatingSelection($event)"></star-rating>
       </div>
       
       <div class="form-group">
@@ -20,7 +22,7 @@
 
       <div class="form-group">
         <label>Wire your review</label>
-        <textarea formControlName="review" cols="30" rows="10"></textarea>
+        <textarea formControlName="review"></textarea>
       </div>
 
       <div class="form-group">
