--- a/src/app/product-ratings/review-form/review-form.component.html
+++ b/src/app/product-ratings/review-form/review-form.component.html
@@ -22,7 +22,7 @@
 
       <div class="form-group">
         <label>Wire your review</label>
-        <textarea formControlName="review"></textarea>
+        <textarea formControlName="review" rows="10"></textarea>
       </div>
 
       <div class="form-group">
