--- a/src/app/product-ratings/review-form/review-form.component.scss
+++ b/src/app/product-ratings/review-form/review-form.component.scss
@@ -1,6 +1,29 @@
 .wrapper {
   padding: 0 1.5rem;
 
+  .product-details {
+    margin-bottom: 3rem;
+
+    .product-image {
+      width: 200px;
+      height: auto;
+      overflow: hidden;
+      user-select: none;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        object-position: center center;
+      }
+    }
+
+    .product-name {
+      font-size: 1.2rem;
+      color: #2587f7;
+    }
+  }
+
   #review-form {
     width: 100%;
     min-height: 400px;
@@ -43,7 +66,8 @@
         border: 1px solid #F72551;
         border-radius: 40px;
         background-color: #F72551;
-        transition: background-color .4s ease;
+        transition: opacity .4s ease,
+        background-color .4s ease;
 
         &:disabled {
           opacity: 0.6 !important;
