--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -7,8 +7,8 @@
 .modal {
   left: 50%;
   top: 50%;
-  width: 98vw;
-  height: 96vh;
+  // width: 98vw;
+  // height: 96vh;
   background-color: #fff;
   transition: width .3s ease, height .3s ease;
   animation: zoomIn .2s ease;
