--- a/src/app/product-ratings/review-form/review-form.component.scss
+++ b/src/app/product-ratings/review-form/review-form.component.scss
@@ -6,7 +6,7 @@
 
     .product-image {
       width: 200px;
-      height: auto;
+      height: 200px;
       overflow: hidden;
       user-select: none;
 
@@ -19,7 +19,7 @@
     }
 
     .product-name {
-      font-size: 1.2rem;
+      font-size: 1rem;
       color: #2587f7;
     }
   }
