--- a/src/app/admin-page/product-creation/product-creation.component.html
+++ b/src/app/admin-page/product-creation/product-creation.component.html
@@ -36,7 +36,7 @@
 
       <div class="form-group">
         <label>Description</label>
-        <textarea formControlName="productDesc" cols="30" rows="5"></textarea>
+        <textarea formControlName="productDesc" rows="5"></textarea>
       </div>
 
       <div class="form-group">
