--- a/src/app/product-ratings/review-form/review-form.component.scss
+++ b/src/app/product-ratings/review-form/review-form.component.scss
@@ -1,12 +1,23 @@
-.wrapper {
-  padding: 0 1.5rem;
+.container {
+  width: 100%;
+  height: calc(100% - 87.19px);
+  padding: 0 5rem 5rem;
+  overflow-y: auto;
 
   .product-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     margin-bottom: 3rem;
 
     .product-image {
-      width: 200px;
-      height: 200px;
+      display: flex;
+      flex-wrap: wrap;
+      width: 400px;
+      height: 400px;
+      margin-bottom: 2rem;
       overflow: hidden;
       user-select: none;
 
@@ -19,8 +30,11 @@
     }
 
     .product-name {
-      font-size: 1rem;
       color: #2587f7;
+      font-size: 0.95rem;
+      font-weight: 400;
+      line-height: 1.5rem;
+      text-align: center;
     }
   }
 
@@ -30,6 +44,7 @@
     
     .form-group {
       display: flex;
+      align-items: center;
       flex-direction: column;
       justify-content: space-between;
 
@@ -59,8 +74,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 100%;
-        height: 36px;
+        width: 190px;
+        height: 50px;
+        margin: auto;
         color: #fff;
         font-size: .85rem;
         border: 1px solid #F72551;
