--- a/src/app/product-ratings/review-form/review-form.component.html
+++ b/src/app/product-ratings/review-form/review-form.component.html
@@ -3,6 +3,8 @@
   [height]="'90vh'"
   [showModal]="showForm" 
   (showModal)="onClose()">
+  <app-spinner [loading]="isLoading"></app-spinner>
+
   <div *ngIf="showForm && product" class="container">
     <div class="product-details">
       <div class="product-image">
