--- a/src/app/product-ratings/review-form/review-form.component.scss
+++ b/src/app/product-ratings/review-form/review-form.component.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: calc(100% - 87.19px);
   padding: 0 5rem 5rem;
+  overflow: hidden;
   overflow-y: auto;
 
   .product-details {
