--- a/src/app/product-ratings/review-form/review-form.component.html
+++ b/src/app/product-ratings/review-form/review-form.component.html
@@ -5,7 +5,7 @@
   (showModal)="onClose()">
 
   <app-spinner [loading]="isLoading"></app-spinner>
-  
+
   <div *ngIf="showForm && product" class="container">
     <div class="product-details">
       <div class="product-image">
@@ -42,5 +42,9 @@
           class="submit-btn">Submit</button>
       </div>
     </form>
+
+    <h3 *ngIf="reviewSubmitted" class="success-msg">
+      Thank you for your review!
+    </h3>
   </div>
 </app-modal>
