--- a/src/app/product-ratings/review-form/review-form.component.html
+++ b/src/app/product-ratings/review-form/review-form.component.html
@@ -6,8 +6,8 @@
 
   <app-spinner [loading]="isLoading"></app-spinner>
 
-  <div *ngIf="showForm && product && !reviewSubmitted" class="container">
-    <div class="product-details">
+  <div *ngIf="showForm" class="container">
+    <div *ngIf="product" class="product-details">
       <div class="product-image">
         <img image-loader [src]="product?.images[0]" [alt]="product.productName">    
       </div>
@@ -43,8 +43,8 @@
       </div>
     </form>
 
-    <h3 *ngIf="reviewSubmitted" class="success-msg">
-      Thank you for your review!
-    </h3>
+    <div *ngIf="reviewSubmitted" class="success-msg">
+      <h3>Thank you for your review!</h3>
+    </div>
   </div>
 </app-modal>
