--- a/src/app/product-ratings/review-form/review-form.component.scss
+++ b/src/app/product-ratings/review-form/review-form.component.scss
@@ -6,6 +6,10 @@
   overflow: hidden;
   overflow-y: auto;
 
+  &.review-submitted {
+    overflow: hidden;
+  }
+
   .product-details {
     display: flex;
     flex-direction: column;
@@ -108,13 +112,14 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: inherit;
+    height: 100%;
     background-color: #fff;
     animation: reveal .4s ease;
+    z-index: 10;
 
     h3 {
       color: #2587f7;
-      font-size: 1.1rem;
+      font-size: 1.3rem;
       font-weight: 400;
       text-align: center;
     }
