--- a/src/app/product-ratings/review-form/review-form.component.html
+++ b/src/app/product-ratings/review-form/review-form.component.html
@@ -6,7 +6,9 @@
 
   <app-spinner [loading]="isLoading"></app-spinner>
 
-  <div *ngIf="showForm" class="container" [class.review-submitted]="reviewSubmitted">
+  <div *ngIf="showForm"
+    class="container" 
+    [class.review-submitted]="reviewSubmitted">
     <div *ngIf="product" class="product-details">
       <div class="product-image">
         <img image-loader [src]="product?.images[0]" [alt]="product.productName">    
@@ -45,6 +47,10 @@
 
     <div *ngIf="reviewSubmitted" class="success-msg">
       <h3>Thank you for your review!</h3>
+
+      <div class="icon">
+        <i class="material-icons">done</i>
+      </div>
     </div>
   </div>
 </app-modal>
