--- a/src/app/product-ratings/review-form/review-form.component.scss
+++ b/src/app/product-ratings/review-form/review-form.component.scss
@@ -106,6 +106,7 @@
 
   .success-msg {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     position: absolute;
@@ -116,12 +117,30 @@
     background-color: #fff;
     animation: reveal .4s ease;
     z-index: 10;
+    user-select: none;
 
     h3 {
+      margin-bottom: 2rem;
       color: #2587f7;
       font-size: 1.3rem;
-      font-weight: 400;
+      font-weight: 300;
       text-align: center;
+    }
+
+    .icon {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 50px;
+      height: 50px;
+      border-radius: 100%;
+      background-color: #32e46d;
+      overflow: hidden;
+
+      .material-icons {
+        color: #fff;
+        font-size: 2.5rem;
+      }
     }
   }
 }
