--- a/src/app/product-ratings/review-form/review-form.component.scss
+++ b/src/app/product-ratings/review-form/review-form.component.scss
@@ -102,6 +102,18 @@
         }
       }
     }
+
+    .error-feedback {
+      margin-top: 2rem;
+      animation: reveal .3s ease;
+      
+      p {
+        color: #963249;
+        font-weight: 500;
+        text-align: center;
+        line-height: 1.7rem;
+      }
+    }
   }
 
   .success-msg {
