--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -7,8 +7,8 @@
 .modal {
   left: 50%;
   top: 50%;
-  // width: 98vw;
-  // height: 96vh;
+  width: auto;
+  height: auto;
   background-color: #fff;
   transition: width .3s ease, height .3s ease;
   animation: zoomIn .2s ease;
@@ -25,6 +25,17 @@
     align-items: center;
     width: 100%;
     padding: 1.5rem;
+
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: -1rem;
+      width: 100%;
+      height: 1rem;
+      background: linear-gradient(#fff, transparent);
+      z-index: 1;
+    }
   
     .close-btn {
       margin-left: auto;
